# qt_webview

./: .gitignore  Readme.md
client/: CMakeLists.txt  frontend.qrc
client/qt_src/: apirouter.cpp  apirouter.h  devwindow.h  mainwindow.cpp  mainwindow.h  worker.cpp  worker.h
client/src/: devwindow.cpp  mainwindow.cpp  mainwindow.h
client/src/webData/: prpd_generator.cpp  prpd_generator.h
client/src/webchannel/: apirouter.cpp  apirouter.h  worker.cpp  worker.h
client/src/websocket/: websocketserver.cpp  websocketserver.h
web/: auto-imports.d.ts  components.d.ts  env.d.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  uno.config.ts  vite.config.ts
web/src/: App.vue  main.ts
web/src/assets/: main.css
web/src/components/: PrpdChart.vue  PrpsChart.vue
web/src/components/three/utils/: axis.ts  color.ts  prpd.ts  resize.ts  three-event.ts  three-renderer.ts
web/src/composables/: index.ts  useQtBinaryData.ts  useQtBridge.ts  useQtMessages.ts
web/src/plugins/webBridge/: bridge.ts  index.ts  utils.ts
web/src/plugins/webBridge/qwebchannel/: qwebchannel.d.ts  qwebchannel.js
web/src/router/: index.ts
web/src/views/: GraphsView.vue  WebChannelView.vue
